WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275470
[JSC] Do not modify valueRegs until we no longer jump to failure path
https://bugs.webkit.org/show_bug.cgi?id=275470
Summary
[JSC] Do not modify valueRegs until we no longer jump to failure path
Yusuke Suzuki
Reported
2024-06-13 21:18:21 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-06-13 21:18:33 PDT
<
rdar://problem/129820423
>
Yusuke Suzuki
Comment 2
2024-06-13 21:20:59 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29806
EWS
Comment 3
2024-06-14 08:58:54 PDT
Committed
280018@main
(e873e2350b35): <
https://commits.webkit.org/280018@main
> Reviewed commits have been landed. Closing PR #29806 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug