[JSC] Do not modify valueRegs until we no longer jump to failure path https://bugs.webkit.org/show_bug.cgi?id=275470 rdar://129820423

Reviewed by Yijia Huang and Justin Michaud.

The failure path of IC is expecting that valueRegs is not overridden in split Handler IC.
This patch fixes it for ModuleNamespaceLoad case.

* Source/JavaScriptCore/bytecode/InlineCacheCompiler.cpp:
(JSC::InlineCacheCompiler::emitModuleNamespaceLoad):

Canonical link: https://commits.webkit.org/280018@main